calcul des stats des équipes

--- a/classic/sass/src/view/main/Main.scss
+++ b/classic/sass/src/view/main/Main.scss
@@ -81,3 +81,14 @@
     top: 30px;
     right: -24px;
 }
+
+
+.teamStats {
+  float:right;
+  span {
+    display: inline-block;
+    padding: 0 5px;
+    font-size: 12px;
+
+  }
+}
